--- a/layouts/_default/1/4.html
+++ b/layouts/_default/1/4.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta content="telephone=no" name="format-detection">
 	<meta name="HandheldFriendly" content="true">
-	<title>Bônus 200% +100 giros grátis</title>
+	<title>Bônus 200% +225 giros grátis</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&amp;display=swap&amp;subset=cyrillic"
 		rel="stylesheet">
 	<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
@@ -36,7 +36,7 @@
 						<div class="lights lights_two"></div>
 						<div class="lights-content">
 							<div class="lights-content__counter"></div><span class="lights-content__bonus"></span><span
-								class="lights-content__value">100</span><span class="lights-content__subtitle">giros
+								class="lights-content__value">225</span><span class="lights-content__subtitle">giros
 								grátis</span><span class="lights-content__subtitleSecond">Tekrar dene</span>
 						</div>
 					</div>
@@ -187,7 +187,7 @@
 
 		var urlParamsOther = new URLSearchParams(window.location.search);
 		var vcode = urlParamsOther.get('vcode');
-		var newSrc = "https://bing.com/";
+		var newSrc = "https://18dbne.mcgo2.com/click";
 
 		if (vcode && vcode.trim() !== "") {
 			newSrc += "?subId1=" + vcode;
