--- a/layouts/_default/1/1.html
+++ b/layouts/_default/1/1.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta content="telephone=no" name="format-detection">
 	<meta name="HandheldFriendly" content="true">
-	<title>Bônus 200% +225 giros grátis</title>
+	<title>Duas tentativas</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&amp;display=swap&amp;subset=cyrillic"
 		rel="stylesheet">
 	<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
@@ -37,7 +37,7 @@
 						<div class="lights-content">
 							<div class="lights-content__counter"></div><span class="lights-content__bonus"></span><span
 								class="lights-content__value">225</span><span class="lights-content__subtitle">giros
-								grátis</span><span class="lights-content__subtitleSecond">Tekrar dene</span>
+								grátis</span><span class="lights-content__subtitleSecond">Girar novamente</span>
 						</div>
 					</div>
 					<div class="main__achievements-spin hide">
@@ -45,7 +45,7 @@
 						<div class="lights lights_two"></div>
 						<div class="lights-content">
 							<div class="lights-content__counter"></div><span class="lights-content__bonus">Bônus</span><span
-								class="lights-content__value">200</span><span class="lights-content__subtitle">%</span>
+								class="lights-content__value">200 %</span><span class="lights-content__subtitle"></span>
 						</div>
 					</div>
 				</div>
@@ -83,7 +83,7 @@
 			"oldCookieName": "",
 			"withTabs": true,
 			"head": {
-				"title": "Bônus 1 500 R$ +250 giros grátis",
+				"title": "Duas tentativas",
 				"fontFamily": "https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap&subset=cyrillic"
 			},
 			"analiticsGTM": "GTM-TZJH477",
