--- a/layouts/_default/1/3.html
+++ b/layouts/_default/1/3.html
@@ -45,7 +45,7 @@
 						<div class="lights lights_two"></div>
 						<div class="lights-content">
 							<div class="lights-content__counter"></div><span class="lights-content__bonus">Bônus</span><span
-								class="lights-content__value">200</span><span class="lights-content__subtitle">%</span>
+								class="lights-content__value">200 %</span><span class="lights-content__subtitle"></span>
 						</div>
 					</div>
 				</div>
