--- a/layouts/_default/1/2.html
+++ b/layouts/_default/1/2.html
@@ -37,7 +37,7 @@
 						<div class="lights-content">
 							<div class="lights-content__counter"></div><span class="lights-content__bonus"></span><span
 								class="lights-content__value">225</span><span class="lights-content__subtitle">giros
-								grátis</span><span class="lights-content__subtitleSecond">Girar novamente</span>
+								grátis</span><span class="lights-content__subtitleSecond">Tente novamente</span>
 						</div>
 					</div>
 					<div class="main__achievements-spin hide">
