Add existing project files to Git

--- a/layouts/_default/1/3.html
+++ b/layouts/_default/1/3.html
@@ -17,7 +17,7 @@
 	<!-- <link rel="manifest" href="./img/favicon/site.webmanifest"> -->
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
-	<link rel="stylesheet" href="/css/main3.css">
+	<link rel="stylesheet" href='/css/main3{{T "Css"}}'>
 </head>
 
 <body>
