--- a/layouts/_default/1/4.html
+++ b/layouts/_default/1/4.html
@@ -17,7 +17,7 @@
 	<!-- <link rel="manifest" href="./img/favicon/site.webmanifest"> -->
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
-	<link rel="stylesheet" href="/css/main4.css">
+	<link rel="stylesheet" href='/css/main4{{T "Css"}}'>
 </head>
 
 <body>
