--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -10,10 +10,13 @@
 
 
 <script type="application/javascript" src="https://cdn.jsdelivr.net/npm/ua-parser-js/dist/ua-parser.min.js"></script>
-{{ $scriptapp := resources.Get "js/app.js" | resources.ExecuteAsTemplate "js/app.js" . | js.Build  | fingerprint }}
-<script>
-{{ $scriptapp.Content | safeJS }}
-</script>
+{{ if .Params.js }}
+{{ $scriptapp := resources.Get .Params.js | resources.ExecuteAsTemplate .Params.js . | js.Build  | fingerprint }}
+<!-- Use this for external scripts -->
+<!-- <script src="{{ $scriptapp.RelPermalink }}"></script> -->
+<!-- Use this for inline scripts -->
+<script> {{ $scriptapp.Content | safeJS }} </script>
+{{ end }}
 {{ with .Params.css }}
 {{ with resources.Get . | resources.Minify | resources.Fingerprint }} <style>{{ .Content | safeCSS  }}</style> {{ end  }}
 {{ end }}
