--- a/layouts/_default/4/1.html
+++ b/layouts/_default/4/1.html
@@ -109,14 +109,14 @@
 				</div>
 			</div>
 			<!--<p class="offerxpires">This offer expires in: <span id="timer"></span></p>-->
-                        <a class="cta clearfix" href="/click" onclick="alert({{ T "Pop1" }});PreventExitPop = false">
+                        <a class="cta clearfix" href="/click" onclick="formSubmit();return false;alert({{ T "Pop1" }});PreventExitPop = false">
 				<div class="txt">
                                     <p>{{ T "16free" }}</p>
                                     <p class="red"><span class="aval"></span>{{ T "Avail" }}</p>
 				</div>
 				
 			</a>
-                        <a href="/click" class="claim" onclick="alert({{ T "Pop1" }}'Congratulations! Your €1,600 has been reserved!\n*************************\nEnter your details on the next page to secure your claim!\n*************************\n');PreventExitPop = false"><div class="button3">
+                        <a href="/click" class="claim" onclick="formSubmit();return false;alert({{ T "Pop1" }});PreventExitPop = false"><div class="button3">
 			<img src="/png/red-arrow-left.png" style="
 				float: left;
 				width: 35px;
