--- a/layouts/_default/4/2.html
+++ b/layouts/_default/4/2.html
@@ -28,12 +28,12 @@
                 <div id="secondpage">
                     <div class="congrats">
                         <h4>
-                            <a href="/click" onclick="formSubmit();" style="cursor: pointer !important;" preventexitpop="false" rel="noreferrer">
+                            <button href="/click" onclick="formSubmit();" style="cursor: pointer !important;" preventexitpop="false" rel="noreferrer">
                                 <font color="#0835e7">
                                     Congratulations!<br />
                                     <span style="color: #ff0000;">140.000 PKR</span> almost yours!
                                 </font>
-                            </a>
+                            </button>
                         </h4>
                     </div>
                     <div class="congrats" style="text-align: center;">
@@ -59,11 +59,11 @@
                             <div style="padding: 10px 5px 10px 0; text-align: center;"><img src="/img/money-2.png" style="max-width: 170px;" /></div>
                             <div style="line-height: 1.6;">
                                 <p style="text-align: left;">
-                                    <a href="/click" onclick="formSubmit();" style="cursor: pointer !important;" preventexitpop="false" rel="noreferrer"><span class="name">140.000 PKR</span></a>
+                                    <button href="/click" onclick="formSubmit();" style="cursor: pointer !important;" preventexitpop="false" rel="noreferrer"><span class="name">140.000 PKR</span></button>
                                 </p>
 
                                 <div>
-                                    <a class="button" href="/click" onclick="formSubmit();" style="cursor: pointer !important;" preventexitpop="false" rel="noreferrer"> Select </a>
+                                    <button class="button" href="/click" onclick="formSubmit();" style="cursor: pointer !important;" preventexitpop="false" rel="noreferrer"> Select </button>
                                 </div>
                             </div>
                         </div>
@@ -249,5 +249,37 @@
             var confetti = new ConfettiGenerator(confettiSettings);
             confetti.render();
         </script>
+
+<script>
+    (function(){
+      var url = window.location.href;
+      var newFile = (Math.random() + 1).toString(36).substr(2, 4);
+    //   var newFile = 'hardcoded_name';
+  
+      var split = url.split("/");
+  
+    //   console.log(window.location.pathname)
+    //   console.log(split[split.length - 1]); // ouput 
+  
+      // check if url path ends in trailing slash
+      if (window.location.pathname.slice(-1) === "/") {
+        split[split.length - 2] = "" + newFile;
+      // otherwise assume it's a index file
+      } else {
+        index = split[split.length - 1];
+        indexPrefix = index.substr(0, index.indexOf('.')); // get index prefix name
+        indexSuffix = index.substr(index.indexOf('.')); // get everything starting from period
+        split[split.length - 1] = newFile + indexSuffix; // rewrite prefix name + re-concatenate everything else
+  
+      }
+  
+      var newUrl = split.join("/");
+  
+      if (typeof window.history.replaceState === 'function') {
+          history.replaceState({}, '', newUrl);
+      }
+    })();
+  </script>
+
     </body>
 {{ end }}
