--- a/layouts/_default/5/4.html
+++ b/layouts/_default/5/4.html
@@ -12,9 +12,8 @@
 <button class="popunder-cta" onclick="formSubmit();">TAP FOR CASH</button>
         </div>
     </div>
-     <div class="text-center p-10">
-        <h1 class="text-3xl font-bold"></h1>
-        <p></p>
+     <div class="container text-center p-10">
+        {{ .Content }}
     </div>
 
 <script>
